nodeとnpmのバージョンを固定

--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "postcss": "^8.4.4",
     "ts-jest": "^27.1.1",
     "vue-jest": "^3.0.4"
+  },
+  "volta": {
+    "node": "16.13.1",
+    "npm": "8.3.0"
   }
 }
